# Simple-Markup

./: README.md
Markup/: CMakeLists.txt  Markup.pro  main.cpp.autosave  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.cpp~  mainwindow.h
build-Markup-Desktop-Debug/: CMakeCache.txt  Makefile  Markup  cmake_install.cmake  moc_mainwindow.cpp  moc_mainwindow.cxx_parameters  qtmarkup
